Add google fonts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,9 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-acme: var(--font-acme-sans);
+  --font-openSans: var(--font-open-sans);
+  --font-lato: var(--font-lato-sans);
 }
 
 @media (prefers-color-scheme: dark) {
